--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -15,7 +15,7 @@
 } 
 
 /* µ¿¿µ»ó  */
-#visualMain{ 
+#visualMain{
 	width:100%; height:100%;
 	z-index:-10;
  	position:absolute;
@@ -24,7 +24,9 @@
 }
 
 video#vid {
-	position:fixed; top:0; left:0; 
+	position:fixed; 
+	top:-30px; 
+	left:0; 
 	width:1950px;
 	height:1150px;
 	z-index:-10;
