--- a/amigo/src/main/webapp/resources/css/index.css
+++ b/amigo/src/main/webapp/resources/css/index.css
@@ -15,16 +15,18 @@
 } 
 
 /* 동영상  */
-#visualMain{ 
+#visualMain{
 	width:100%; height:100%;
 	z-index:-10;
- 		position:absolute;
+ 	position:absolute;
 	left:0; bottom:0;  
 	overflow:hidden;
 }
 
 video#vid {
-	position:fixed; top:0; left:0; 
+	position:fixed; 
+	top:-30px; 
+	left:0; 
 	width:1950px;
 	height:1150px;
 	z-index:-10;
@@ -62,7 +64,7 @@ video#vid {
 	letter-spacing:1px;
 	font-size:16px;
 	line-height:27px;
-	color:white;
+	color:#b49759;
 	max-width:860px;
 	padding:0 15px;
 }
@@ -77,8 +79,6 @@ video#vid {
 	z-index:150;
 }
 .main-comment{
-/* 		-webkit-transition: all 0.4s ease-out;
-    	transition: all 0.4s ease-out; */
 	text-align:center;
 	letter-spacing:4px;
 	font-size:50px;
@@ -95,18 +95,15 @@ video#vid {
 	color:rgba(255,255,255,.9);
 } 
 
-/* 2번째 본문 스타일리스트 */
+
 #article_2{
 	position:relative;
 	padding:20px 0 0 0;
 }
 #article_2 > .parallax-window{
-	/* min-height: 700px; */
 	display: flex;
 	flex-flow: row wrap;
-	/* padding:10px; */
 }
-
 
 #parallax-image > .img-text > a{
 	width:100%;
@@ -119,13 +116,8 @@ video#vid {
 	margin:10px;
 	width:100%;
 	height:700px;
-/* 	top:30px;
-	left:20px; */
 	overflow: hidden;
 	background:black;
-	/* box-sizing: border-box; */
-/* 		-webkit-transition: all 0.7s ease-out; 
-    	transition: all 0.7s ease-out; */
 }
 
 
@@ -142,18 +134,17 @@ video#vid {
    	width:100%;
    	margin:10px;
    	position:relative;
-   	/* top: -670px; */
    	height: 700px;
-   	/* left: 66%; */
    	z-index:150;
    	overflow: hidden;
    }
    
 #article_2 > .parallax-window > .img-text_2 > a{
-   	width:100%;
-   	height:100%;
-   }
-   .img-text:hover #first-sub{
+  	width:100%;
+  	height:100%;
+}
+
+.img-text:hover #first-sub{
 	-webkit-transform:scale(1.07);
 	transform:scale(1.07);
 	opacity:1;
@@ -234,17 +225,10 @@ video#vid {
 .article-clubs{
 	position: relative;
 	display:block;
+	top:0;
 	width:100%;
 	background:#eee;
 }
-
-/* 	#article_4 > .sub-font{
-		text-align:center;
-		font-weight:900;
-		font-size:24px;
-		padding:15px;
-		color:#333;
-	} */
 
 #article_4 > .first-article{
 	display:flex;
@@ -254,7 +238,7 @@ video#vid {
 	text-align:center;
 }
 #article_4 > .first-article > .img_box{
-	margin:12px;
+	margin:10px 12px 40px 12px;
 	flex:4 4 400px;
 	width:100%;
 }
@@ -271,14 +255,14 @@ video#vid {
 
 #article_4 > .first-article > .item-box img{
 	display:block;
-		width:100%;
+	width:100%;
 	opacity:0.85;
 	transition: transform 0.3s ease;
 }
 
 #article_4 > h2{
 	text-align: center;
-	padding: 50px 0 0 0;
+	padding: 150px 0 50px 0;
 	font-weight: bold;
 	font-size: 30px;
 }
@@ -305,6 +289,3 @@ div.item-box:hover{
 	font-size:1.4em;
 	color:rgba(255,255,255,.9);
 }
-
-
-/* ---------------------------footer--------------------------------- */
