--- a/amigo/src/main/webapp/resources/css/top-menu.css
+++ b/amigo/src/main/webapp/resources/css/top-menu.css
@@ -1,5 +1,7 @@
+@import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
+
 html {
-  font-family: sans-serif;
+  font-family: 'Jeju Gothic', serif;
   color: #4b5f65;
   background: #f5f7fa;
 }
@@ -12,11 +14,12 @@ nav { width: 100%; }
 .nav_wrapper {
   position: fixed;
   left: 0;
-  top: 0;
+  top: -20px;
   z-index:1000;
+  height: 100px;
   width: 100%;
   transition: top .5s ease-out;
-  background: #1b1b1b;
+  background: rgba(14,14,14,.8); 
 }
 
 .scroll { top: -90px; }
@@ -32,7 +35,7 @@ nav { width: 100%; }
 .btn {
   padding: 10px 1%;
   margin: 5px;
-/*   color: #fff; */
+  color: #fff;
   text-decoration: none;
   font-family: sans-serif;
   transition: all 0.1s ease;
@@ -57,6 +60,16 @@ main {
 	
 #logo{
 	float:left;
+}
+
+#logo > h2 {
+	font-family: 'Tangerine', serif; 
+	font-weight: bold;
+	padding-left:50px;
+	padding-top: 7px;
+	font-size: 66px;
+	letter-spacing:4px;
+	color:#b49759;
 }
 #log > i,#join > i{
 	float:right;
@@ -124,21 +137,16 @@ main {
 }
 
 .search_box input.search_icon:hover { background: #efa666; }
-
 .menu-link { display: none; }
-
 .spinner-master input[type=checkbox] { display: none; }
-
 .menu {
   width: 100%;
   height: auto;
   background: #1b1b1b;
   transition: all 0.3s ease;
- 
 }
 
 .menu ul {
-	
   padding: 0px;
   margin: 0px;
   float:right;
@@ -162,28 +170,31 @@ main {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-size: 14px;
+  font-size: 17px;
 }
 
 .menu ul li a:hover {
   background: #39484d;
-  color: #fff;
+  color: rgba(0,0,0,.7);
 }
 
 .menu ul li.hover > a {
-  background: #39484d;
-  color: #fff;
+  background: rgba(255,255,255,.7);
+
 }
 
-.menu ul li > a { padding: 30px; }
+.menu ul li > a { 
+	padding: 32px;   
+	color: white;
+}
 
 .menu ul ul {
   display: none;
   position: absolute;
-  text-align:center;
+  text-align: center;
   top: 100%;
   min-width: 160px;
-  background: #39484d;
+  background-color: rgba(255,255,255,.7);
 }
 
 .menu ul li:hover > ul { display: block; }
@@ -193,22 +204,23 @@ main {
 .menu ul ul > li a {
   padding: 18px 10px;
   height: auto;
-  background: #1b1b1b;
+  color: rgba(0,0,0,.7);
+  /* background: #1b1b1b;
   border-bottom: 0.4px solid rgba(255,255,255,.9);
-  
+   */
 }
 
-.menu ul ul > li:last-child a {
+/* .menu ul ul > li:last-child a {
   padding: 18px 10px;
   height: auto;
   background: #1b1b1b;
   border-bottom: 0.4px solid rgba(255,255,255,.9);
   
 }
-
+ */
 
 .menu ul ul > li:hover{
-  background: #39484d;
+  /* background: #39484d; */
   color: #fff;
 }
 
@@ -236,7 +248,10 @@ main {
 	display:none;
 	
 }
-
+.nav_wrapper{
+	background: #1b1b1b;
+	
+}
 #log > i,#search > i,#join > i{
 	line-height:60px;
 }
@@ -333,25 +348,38 @@ a.menu-link.active:after { content: "\2715"; }
 
 .menu,
 .menu > ul ul {
-  overflow: hidden;
-  max-height: 0;
-  background-color: #1b1b1b;
+	position: relative;
+	top: -20px;
+  	overflow: hidden;
+  	max-height: 0;
+  	background-color: #1b1b1b;
 }
 
 .menu > li > ul.sub-menu {
-  padding: 0px;
-  border: none;
+	 padding: 0px;
+	 border: none;
 }
 
 .menu.active,
-.menu > ul ul.active { max-height: 55em; }
+.menu > ul ul.active { 
+	position: relative;
+	top: -20px;
+	max-height: 55em; 
+}
 
-.menu ul { display: inline; float:none; }
+.menu ul { 
+	display: inline; 
+	float:none; 
+}
 
 .menu li,
-.menu > ul > li { display: block; }
+.menu > ul > li { 
+	display: block; 
+}
 
-.menu > ul > li:last-of-type a { border: none; }
+.menu > ul > li:last-of-type a {
+	border: none; 
+}
 
 .menu li a {
   color: #fff;
@@ -370,11 +398,14 @@ a.menu-link.active:after { content: "\2715"; }
   padding: 0.55em 0.5em;
 }
 
-.menu li.has-submenu > a.active:after { content: "-"; }
+.menu li.has-submenu > a.active:after {
+	content: "-"; 
+}
 
 .menu ul ul > li a {
   background-color: #1b1b1b;
   padding: 10px 18px 10px 30px;
+  color: rgba(250,250,250,.7);
 }
 
 .menu ul li a:hover {
@@ -406,5 +437,4 @@ a.menu-link.active:after { content: "\2715"; }
 .search_box input { width: 70%; }
 .search_box input.search_icon { width: 17%; }
 #hero { height: 200px; }
-
 }
